# shadowgraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  env.sh  output  play.sh  sdkconfig  sdkconfig.defaults
components/artnet_control/: CMakeLists.txt  artnet_control.c
components/artnet_control/host_test/: CMakeLists.txt  test_artnet_control.cpp
components/artnet_control/include/: artnet_control.h
components/byte_queue/: CMakeLists.txt  byte_queue.c
components/byte_queue/host_test/: CMakeLists.txt  test_byte_queue.cpp
components/byte_queue/include/: byte_queue.h
components/curve_interp/: CMakeLists.txt  curve_interp.c
components/curve_interp/host_test/: CMakeLists.txt  test_curve_interp.cpp
components/curve_interp/include/: curve_interp.h
components/driver_dac8871/: CMakeLists.txt  dac8871_idf6.c
components/driver_dac8871/include/: dac8871_idf6.h
components/driver_dacx0004/: CMakeLists.txt  dacx0004_idf6.c
components/driver_dacx0004/include/: dacx0004_idf6.h
components/frame_buffer/: CMakeLists.txt  frame_buffer.c
components/frame_buffer/host_test/: CMakeLists.txt  test_frame_buffer.cpp
components/frame_buffer/include/: frame_buffer.h
components/frame_stream/: CMakeLists.txt  frame_stream.c
components/frame_stream/include/: frame_stream.h
components/isr_spi/: CMakeLists.txt  isr_spi.c
components/isr_spi/include/: isr_spi.h
components/laser_command/: CMakeLists.txt  laser_command.c
components/laser_command/host_test/: CMakeLists.txt  test_laser_command.cpp
components/laser_command/include/: laser_command.h
components/laser_engine/: CMakeLists.txt  laser_engine.c
components/laser_engine/include/: laser_engine.h
components/point_ring/: CMakeLists.txt  point_ring.c
components/point_ring/host_test/: CMakeLists.txt  test_point_ring.cpp
components/point_ring/include/: point_ring.h
components/point_stream/: CMakeLists.txt  point_stream.c
components/point_stream/host_test/: CMakeLists.txt  test_point_stream.cpp
components/point_stream/include/: point_stream.h
components/renderer/: CMakeLists.txt  renderer.c
components/renderer/include/: renderer.h
components/scene_stream/: CMakeLists.txt  scene_stream.c
components/scene_stream/host_test/: CMakeLists.txt  test_scene_stream.cpp
components/scene_stream/include/: scene_stream.h
components/src_idle/: CMakeLists.txt  src_idle.c
components/src_idle/include/: src_idle.h
components/src_udp/: CMakeLists.txt  src_udp.c
components/src_udp/include/: src_udp.h
components/udp_echo/: CMakeLists.txt  udp_echo.c
components/udp_echo/include/: udp_echo.h
components/wifi_ap/: CMakeLists.txt  wifi_ap.c
components/wifi_ap/include/: wifi_ap.h
components/wifi_sta/: CMakeLists.txt  wifi_sta.c
components/wifi_sta/include/: wifi_sta.h
docs/: CURVE_MOTION.md  FRAME_STREAMING.md
hardware/: LaserScanner.TXT  LaserScanner.brd  LaserScanner.sch  buzzard_labels.lbr  laserscanner.lbr
hardware/BuzzardPictures/: e#stop#jpg.lbr  key#png.lbr
hardware/Production/: LaserScanner-Panel.GBL  LaserScanner-Panel.GBO  LaserScanner-Panel.GBS  LaserScanner-Panel.GKO  LaserScanner-Panel.GTL  LaserScanner-Panel.GTO  LaserScanner-Panel.GTP  LaserScanner-Panel.GTS  LaserScanner-Panel.TXT  LaserScanner-Panel.b#1  LaserScanner-Panel.brd  LaserScanner-Panel.dri  LaserScanner-Panel.gpi  ordering_instructions.txt
main/: CMakeLists.txt  idf_component.yml  main.c
tools/: stream_scene.py
tools/artnetctl/: Cargo.toml  README.md
tools/artnetctl/src/: main.rs
tools/frame_send/: Cargo.toml  README.md
tools/frame_send/src/: main.rs
tools/ildaplay/: Cargo.toml  README.md
tools/ildaplay/src/: main.rs
tools/quantize/: README.md  quantize.py
tools/scenekind/: Cargo.toml
tools/scenekind/src/: main.rs
tools/svg2scene/: Cargo.toml  README.md  build.rs
tools/svg2scene/src/: analyze.rs  emit.rs  interp.rs  lib.rs  main.rs  model.rs  optimize.rs  order.rs  parse.rs  plan.rs  segment.rs  stream.rs  viz.rs
tools/svg2scene/tests/: pipeline.rs
tools/trace/: README.md  trace.py
