[package]
name = "svg2scene"
version = "0.2.0"
edition = "2021"
description = "Convert SVG artwork into a cubic-Bézier (CURVE) galvo laser command stream"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
usvg = "0.47"
kurbo = "0.13"
lasy = "0.4"

[build-dependencies]
cc = "1"

[[bin]]
name = "svg2scene"
path = "src/main.rs"

[lib]
name = "svg2scene"
path = "src/lib.rs"
